--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-torch
-torchvision
-numpy
-opencv-python
-tqdm
-gradio
-requests
-basicsr
-timm
+torch>=1.7.0
+torchvision>=0.8.0
+numpy>=1.19.2
+opencv-python>=4.4.0
+tqdm>=4.50.0
+gradio==0.0.8
+requests>=2.25.0
+basicsr>=1.4.2
+timm>=0.6.7
